--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ a:active {
 .main-content-container {
   grid-area: main-content;
   background-color: #edf1f5;
-  color: #acd5f2;
+  color: #748899;
 }
 .main-content-container .main-content-cards-container {
   margin: 2rem;
